--- a/www.hlidacshopu.cz/src/html/priceterier/sampleData1.html
+++ b/www.hlidacshopu.cz/src/html/priceterier/sampleData1.html
@@ -1,25 +1,25 @@
 [
 {
 "order": 1,
-"realSalePerc": 92,
-"finalPrice": 180,
-"realSaleAbs": 120,
-"itemName": "AlzaPower Q100 Quick Charge 3.0 + AlzaPower Core USB-C 3.2 Gen 1, 1m bílý",
-"itemImage": "https://i.alza.cz/ImgW.ashx?fd=f3&cd=BUNAEY0161c",
-"itemUrl": "alzapower-q100-quick-charge-3-0-alzapower-core-usb-c-3-2-gen-1-1m-bily-d5672539.htm",
+"realSalePerc": 99.48,
+"finalPrice": 2.0,
+"realSaleAbs": 5,
+"itemName": "SAMSUNG Gradation Cover kryt pro SAMSUNG Galaxy J6+ modrá",
+"itemImage": "https://images.mironet.cz/foto/3/96025663/1.jpg",
+"itemUrl": "samsung-gradation-cover-kryt-pro-samsung-galaxy-j6-modra+dp372448/",
 "fromDate": 20200811,
-"shop": "alza"
+"shop": "mironet"
 },
 {
 "order": 2,
-"realSalePerc": 80,
-"finalPrice": 120,
-"realSaleAbs": 80,
-"itemName": "Spigen Neo Hybrid Gunmetal Samsung Galaxy S20+",
-"itemImage": "https://i.alza.cz/ImgW.ashx?fd=f3&cd=SPICc160",
-"itemUrl": "spigen-neo-hybrid-gunmetal-samsung-galaxy-s20-levne-d5806928.htm",
+"realSalePerc": 99.2,
+"finalPrice": 2.0,
+"realSaleAbs": 247,
+"itemName": "Inkoustová náplň Epson T0893, 180 stran - originální červená (C13T08934011)",
+"itemImage": "https://static.datart.cz/inkoustova-napln-epson-t0893-180-stran-originalni-cervena/media_964643.jpg",
+"itemUrl": "inkoustova-napln-epson-t0893-180-stran-originalni-cervena.html",
 "fromDate": 20200811,
-"shop": "alza"
+"shop": "datart"
 },
 {
 "order": 3,
