--- a/arx.monks.cloud/src/html/index.html
+++ b/arx.monks.cloud/src/html/index.html
@@ -121,7 +121,7 @@
 <section class="intro">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="intro-box white-box box-shadow mdc-layout-grid__cell">
+      <div class="intro-box white-box mdc-layout-grid__cell">
         <p>We are proud of our<br>20-year track record of building great companies in
           successful partnerships with business owners and managers.</p>
         <div class="button">
@@ -131,13 +131,20 @@
     </div>
   </div>
 </section>
-<div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+
+<div class="mdc-layout-grid layout-arx">
+  <div class="mdc-layout-grid__inner">
+    <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="border-bg"></div>
+    </div>
+  </div>
 </div>
+
 <section class="about">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 class="underline--light">Mission statement</h2>
+        <h3 class="underline--light">Mission statement</h3>
         <p>Our core objective is to form successful partnerships with owners, managers
           and other stakeholders to realise the full potential of our portfolio companies
           while achieving superior returns for the firm‘s&nbsp;investors and partner
@@ -145,7 +152,7 @@
       </div>
       <div
         class="about--bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 class="underline--light">Background history</h2>
+        <h3 class="underline--light">Background history</h3>
         <p>With more than € 300&nbsp;million raised in four funds, ARX has become a
           leading private equity firm in its segment operating in the Central European
           region. We’re proud of our 20-year track-record investing in and supporting
@@ -159,27 +166,27 @@
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class="investments--bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h2>Facts and figures</h2>
+        <h3>Facts and figures</h3>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="investments--box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="white-box">
-          <h3>$4.2B</h3>
+          <h4>$4.2B</h4>
           <p>committed capital under management</p>
         </div>
         <div class="white-box">
-          <h3>$25M – 1B</h3>
+          <h4>$25M – 1B</h4>
           <p>committed capital under management</p>
         </div>
         <div class="white-box">
-          <h3>$330M</h3>
+          <h4>$330M</h4>
           <p>committed capital under management</p>
         </div>
         <div class="white-box">
-          <h3>$4B</h3>
+          <h4>$4B</h4>
           <p>committed capital under management</p>
         </div>
         <div class="white-box">
-          <h3>100+</h3>
+          <h4>100+</h4>
           <p>committed capital under management</p>
         </div>
       </div>
@@ -190,17 +197,17 @@
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div
-        class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
         <svg width="144" height="133" viewBox="0 0 144 133" fill="none" xmlns="http://www.w3.org/2000/svg">
           <title>[Icon] Our Believes</title>
           <path
             d="M40.834 0.0332989C40.1015 0.13898 39.4043 0.477419 38.8683 0.987563C36.3248 3.37085 34.6275 6.57547 33.4767 10.0806C29.953 11.2294 26.7161 12.9733 24.3223 15.5252C23.1052 16.8381 23.1052 19.0955 24.3223 20.4084C26.7148 22.9589 29.9555 24.7041 33.4767 25.8531C34.6264 29.3723 36.3164 32.555 38.8683 34.9461C40.1875 36.194 42.4914 36.194 43.8106 34.9461C46.3625 32.555 48.0526 29.3723 49.2022 25.8531C52.7235 24.7041 55.9642 22.9588 58.3567 20.4084C59.5737 19.0955 59.5737 16.8381 58.3567 15.5252C55.9628 12.9733 52.726 11.2294 49.2022 10.0806C48.0515 6.57547 46.3542 3.37085 43.8106 0.987563C43.0294 0.245191 41.9015 -0.116416 40.834 0.0332989ZM101.939 0.0332989C101.206 0.13898 100.509 0.477419 99.973 0.987563C97.4295 3.37085 95.7322 6.57547 94.5814 10.0806C91.0577 11.2294 87.8208 12.9733 85.427 15.5252C84.2099 16.8381 84.2099 19.0955 85.427 20.4084C87.8195 22.9588 91.0602 24.7041 94.5814 25.8531C95.7311 29.3723 97.4211 32.555 99.973 34.9461C101.292 36.194 103.596 36.194 104.915 34.9461C107.467 32.555 109.157 29.3723 110.307 25.8531C113.828 24.7041 117.069 22.9589 119.461 20.4084C120.678 19.0955 120.678 16.8381 119.461 15.5252C117.067 12.9733 113.831 11.2294 110.307 10.0806C109.156 6.57547 107.459 3.37085 104.915 0.987563C104.134 0.245191 103.006 -0.116416 101.939 0.0332989ZM41.3395 9.40701C42.0364 10.6644 42.5968 12.1091 42.9682 13.6728C43.2602 14.9635 44.3229 16.0482 45.6078 16.3671C47.1725 16.7383 48.6181 17.2983 49.8762 17.9948C48.6181 18.6914 47.1725 19.2515 45.6078 19.6227C44.3368 19.9328 43.2785 20.9905 42.9682 22.2608C42.5968 23.8246 42.0364 25.2693 41.3395 26.5266C40.6425 25.2693 40.0821 23.8246 39.7108 22.2608C39.4005 20.9905 38.3422 19.9328 37.0711 19.6227C35.5064 19.2515 34.0609 18.6914 32.8028 17.9948C34.0609 17.2983 35.5064 16.7383 37.0711 16.3671C38.3561 16.0482 39.4187 14.9635 39.7108 13.6728C40.0821 12.1091 40.6425 10.6644 41.3395 9.40701ZM102.444 9.40701C103.141 10.6644 103.702 12.1091 104.073 13.6728C104.365 14.9635 105.428 16.0482 106.713 16.3671C108.277 16.7383 109.723 17.2983 110.981 17.9948C109.723 18.6914 108.277 19.2515 106.713 19.6227C105.441 19.9328 104.383 20.9905 104.073 22.2608C103.702 23.8246 103.141 25.2693 102.444 26.5266C101.747 25.2693 101.187 23.8246 100.815 22.2608C100.505 20.9905 99.4469 19.9328 98.1758 19.6227C96.6111 19.2515 95.1656 18.6914 93.9075 17.9948C95.1656 17.2983 96.6111 16.7383 98.1758 16.3671C99.4607 16.0482 100.523 14.9635 100.815 13.6728C101.187 12.1091 101.747 10.6644 102.444 9.40701ZM71.3864 25.1795C70.6538 25.2852 69.9566 25.6235 69.4207 26.1337C66.2631 29.0923 64.1191 33.0989 62.7374 37.528C58.288 38.9072 54.25 41.0977 51.2802 44.2636C50.0632 45.5765 50.0632 47.834 51.2802 49.1469C54.2489 52.3114 58.2901 54.5031 62.7374 55.8825C64.1191 60.3114 66.2631 64.3182 69.4207 67.2768C70.7399 68.5248 73.0438 68.5248 74.363 67.2768C77.5205 64.3182 79.6646 60.3114 81.0463 55.8825C85.4935 54.5031 89.5348 52.3114 92.5034 49.1469C93.7205 47.834 93.7205 45.5765 92.5034 44.2636C89.5336 41.0977 85.4956 38.9072 81.0463 37.528C79.6646 33.0989 77.5205 29.0923 74.363 26.1337C73.5817 25.3913 72.4539 25.0298 71.3864 25.1795ZM12.9775 28.9963C9.02754 29.227 5.18715 31.3946 3.92592 35.9364C3.78428 36.4717 3.67462 36.7146 3.59834 37.4158L0.00394956 76.9312C-0.00131652 77.0426 -0.00131652 77.1558 0.00394956 77.268C0.0583501 84.129 4.77404 88.7335 6.3503 90.4585C6.40458 90.516 6.4608 90.5717 6.5188 90.6274C14.4345 98.2066 24.3146 105.133 30.3878 112.574L28.7591 128.964C28.5711 130.843 30.1089 132.724 31.989 132.915C33.8691 133.106 35.754 131.572 35.9479 129.693L37.7451 111.732C37.8288 110.838 37.5624 109.917 37.015 109.206C29.9796 99.9837 19.1926 92.7732 11.6296 85.5751C11.5735 85.5194 11.5138 85.4601 11.4611 85.4061C9.67313 83.446 7.24626 80.6625 7.19275 77.2672C8.40278 63.6733 9.67719 49.8251 10.7871 38.257C11.446 33.9378 16.3644 37.2296 16.1787 37.359C15.5958 48.7761 14.9834 60.226 14.3815 71.6543C14.323 72.7195 14.7689 73.8017 15.561 74.5168L31.7357 88.8861C33.1309 90.1593 35.562 90.0437 36.8299 88.644C38.0979 87.2441 37.9718 84.8149 36.5657 83.5538L23.0867 71.5419C23.2589 71.1338 23.3546 70.6937 23.3675 70.251C23.5025 67.7334 24.7018 65.8451 25.8948 65.087C27.0712 64.3395 28.1068 64.1324 30.0508 65.6483C36.1937 70.7388 42.6916 75.6536 49.1461 80.186C53.0086 82.8987 54.5951 84.0234 56.391 86.5287C56.7927 87.076 57.337 88.1168 57.7389 89.2229C58.2359 91.1512 60.557 92.3805 62.4327 91.7088C64.3083 91.037 65.32 88.6143 64.4784 86.8093C63.9488 85.3515 63.309 83.7866 62.2319 82.3189C59.8183 78.952 57.2143 77.0397 53.3021 74.2924C45.6932 68.7758 40.0771 64.5583 34.6 60.0354C30.7468 56.9744 25.7631 56.828 22.2443 58.969L23.3675 37.921C23.3675 37.6718 23.3594 37.3518 23.3569 37.1702C23.4334 32.4122 19.3598 29.4245 14.8309 28.9963C14.2216 28.9386 13.5915 28.9605 12.9775 28.9963H12.9775ZM128.953 28.9963C124.424 29.4245 120.351 32.4116 120.427 37.1688C120.427 37.4899 120.418 37.8166 120.416 37.921L121.539 58.9697C118.021 56.8288 113.037 56.975 109.184 60.036C103.149 65.0444 96.7073 69.921 90.4816 74.2931C86.5694 77.0404 83.9654 78.9528 81.5518 82.3197C76.6107 89.0518 77.2971 98.7943 77.2834 102.358C77.2834 111.353 77.2834 120.358 77.2834 129.356C77.2566 131.254 78.9787 133 80.8778 133C82.777 133 84.4991 131.254 84.4722 129.356V102.414C84.4864 98.6967 85.0102 89.7755 87.3927 86.5294C89.1886 84.0242 90.7751 82.8995 94.6376 80.1868C102.363 74.5841 108.148 70.2565 113.733 65.6489C115.677 64.1331 116.712 64.3402 117.889 65.0877C119.082 65.8458 120.281 67.734 120.416 70.2517C120.429 70.6943 120.525 71.1345 120.697 71.5427L107.218 83.5545C105.812 84.8157 105.686 87.2447 106.954 88.6446C108.222 90.0444 110.653 90.16 112.048 88.8867L128.223 74.5176C129.015 73.8025 129.461 72.7203 129.402 71.655C128.811 60.2269 128.179 48.7762 127.605 37.3596C127.498 36.8998 132.418 34.0056 132.997 38.2577C134.303 51.7417 135.548 65.654 136.591 77.268C136.537 80.6632 134.111 83.4467 132.323 85.4068C132.275 85.4589 132.201 85.5254 132.154 85.5757C124.591 92.7739 113.804 99.9844 106.769 109.206C106.221 109.918 105.955 110.839 106.039 111.732L107.836 129.694C108.03 131.573 109.915 133.106 111.795 132.916C113.675 132.725 115.213 130.843 115.025 128.964L113.396 112.574C119.469 105.133 129.349 98.2068 137.265 90.6277C137.323 90.5737 137.379 90.5162 137.433 90.4587C139.01 88.7337 143.725 84.1292 143.78 77.2682C143.785 77.1567 143.785 77.0434 143.78 76.9313L140.185 37.4159C140.108 36.6826 139.952 36.3751 139.856 35.9302C138.394 30.6818 133.481 28.5683 128.953 28.9965L128.953 28.9963ZM71.8918 34.6093C73.129 36.5157 74.215 38.6053 74.8123 41.1203C75.1043 42.4109 76.167 43.4956 77.4519 43.8146C79.9756 44.4132 82.1119 45.4919 84.0229 46.7334C82.1134 47.9727 79.9724 48.9981 77.4519 49.5959C76.167 49.9149 75.1043 50.9996 74.8123 52.2902C74.2141 54.8092 73.1318 56.9491 71.8918 58.8574C70.6518 56.9491 69.5696 54.8092 68.9714 52.2902C68.6793 50.9996 67.6167 49.9149 66.3317 49.5959C63.8112 48.9981 61.6702 47.9727 59.7607 46.7334C61.6717 45.4919 63.8081 44.4132 66.3317 43.8146C67.6167 43.4956 68.6793 42.4109 68.9714 41.1203C69.5686 38.6053 70.6547 36.5157 71.8918 34.6093ZM62.5127 98.7656C60.7465 98.9597 59.2732 100.639 59.3114 102.414V129.356C59.2846 131.254 61.0067 133 62.9058 133C64.805 133 66.5271 131.254 66.5002 129.356V102.414C66.5442 100.376 64.5399 98.5426 62.5127 98.7656Z"
             fill="#FFA300"/>
         </svg>
-        <h2>What we believe in</h2>
+        <h3>What we believe in</h3>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Partnership</h3>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-5-desktop">
+        <h4>Partnership</h4>
         <p>At ARX we believe in the power of successful partnerships. Our primary goal
           is to partner with owners and managers in releasing growth potential and
           developing businesses.</p>
@@ -214,7 +221,7 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="team--bg-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2>Meet our team</h2>
+        <h3>Meet our team</h3>
         <div class="button">
           <a class="button--info" href="">MORE INFO</a>
         </div>
@@ -230,14 +237,14 @@
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Recent news</h2>
+        <h3>Recent news</h3>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img alt="Recent News" src="/assets/img/news/news01.jpg" width="100%">
         <span class="date">2020/05/15</span>
         <div class="article-title">
-          <h3>ARX Equity Partners nominated for the Central and Eastern Europe Deal of the
-            Year Award and the Nagrody PSIK Private Equity Deal of the Year&nbsp;Award</h3>
+          <h4>ARX Equity Partners nominated for the Central and Eastern Europe Deal of the
+            Year Award and the Nagrody PSIK Private Equity Deal of the Year&nbsp;Award</h4>
         </div>
         <p>ARX Equity Partners has been selected as a finalist for the second
           consecutive year for the Real Deals Central and Eastern Europe Deal of the Year
@@ -248,8 +255,8 @@
         <img alt="Recent News" src="/assets/img/news/news02.jpg" width="100%">
         <span class="date">2020/03/26</span>
         <div class="article-title">
-          <h3>ARX Equity Partners Exits DC Bled
-            for 3.6x</h3>
+          <h4>ARX Equity Partners Exits DC Bled
+            for 3.6x</h4>
         </div>
         <p>ARX Equity Partners (“ARX”), a private equity firm with a 20-year track
           record supporting the growth and development of mid-sized companies in Central
