--- a/arx.monks.cloud/src/html/team/index.html
+++ b/arx.monks.cloud/src/html/team/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>ARX - Strategy</title>
+  <title>ARX - Team</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/assets/css/typography.css">
   <link rel="stylesheet" href="/assets/css/colors.css">
   <link rel="stylesheet" href="/assets/css/header.css">
+  <link rel="stylesheet" href="/assets/css/subsite-team.css">
 
   <!-- MATERIAL DESIGN COMPONENTS -->
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
@@ -121,10 +122,9 @@
 <section class="intro">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="yellow-box intro-box mdc-layout-grid__cell">
-        <p>We seek to Invest in Central European companies with EBITDAs of at least €
-          1&nbsp;million that are valued between € 10&nbsp;million and € 50&nbsp;million in
-          enterprise value&nbsp;(“EV”)</p>
+      <div class="white-box intro-box mdc-layout-grid__cell">
+        <p>Our team members personally invest in each transaction, our interests are
+          aligned with our partners in every situation.</p>
       </div>
     </div>
   </div>
@@ -136,44 +136,95 @@
     </div>
   </div>
 </div>
-<section class="transaction">
+<section class="team">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>KEY Transaction types</h2>
+        <h2>Team</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Succession Situations of Family Businesses</h3>
-        <p>This is our favorite type of transaction. The owners would like to divest
-          entirely from the business in order to pursue other opportunities, or partially
-          divest while retaining a shareholding alongside&nbsp;ARX.</p>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">Brian Wardrop</span><br>
+          <span class="member-post text-opacity">Managing Partner</span>
+        </div>
       </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Corporate<br>Divestitures</h3>
-        <p>A&nbsp;corporation seeking to divest a Central European subsidiary.</p>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">Michal Aron</span><br>
+          <span class="member-post text-opacity">Partner</span>
+        </div>
       </div>
-      <div class="dark-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Management Buyouts (MBO)  / Buy-ins (MBI)</h3>
-        <p>Managers of a company would like to become co-owners of the business, or an
-          outside management team would like to acquire a company with our financial
-          support.</p>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+       <div class="member-description">
+        <span class="member-name">Tomáš Lánský</span><br>
+        <span class="member-post text-opacity">Partner</span>
+       </div>
       </div>
-      <div
-        class="yellow-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--dark">Growth Equity</h3>
-        <p>A&nbsp;company seeking capital to strengthen its market position, acquire a
-          complementary business or fund a significant capex investment</p>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+       <div class="member-description">
+        <span class="member-name">Béla Lendvai-Lintner</span><br>
+        <span class="member-post text-opacity">Partner</span>
+       </div>
       </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Financial Restructuring</h3>
-        <p>A&nbsp;company seeking capital to help get through a period of financial or
-          operational&nbsp;stress</p>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+       <div class="member-description">
+        <span class="member-name">Radil Stefovski</span><br>
+        <span class="member-post text-opacity">Investment Director</span>
+       </div>
+      </div>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">Ivana Tesařová</span><br>
+          <span class="member-post text-opacity">Investment Manager</span>
+        </div>
+      </div>
+
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">David Swaim</span><br>
+          <span class="member-post text-opacity">Analyst</span>
+        </div>
+      </div>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">Martin Medo</span><br>
+          <span class="member-post text-opacity">Analyst</span>
+        </div>
+      </div>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">Jaroslav Horák</span><br>
+          <span class="member-post text-opacity">Investment Committee Chairman</span>
+        </div>
+      </div>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">Jacek Korpała</span><br>
+          <span class="member-post text-opacity">Co-Managing Partner</span><br>
+          <span class="member-post text-opacity">Fund II&III</span>
+        </div>
+      </div>
+      <div class="member mdc-layout-grid__cell">
+        <img alt="Team Member - Brian Wardrop" src="/assets/img/team-member.jpg" width="100%" height="auto">
+        <div class="member-description">
+          <span class="member-name">Monika Hubena</span><br>
+          <span class="member-post text-opacity">Office Manager</span>
+        </div>
       </div>
     </div>
   </div>
 </section>
+
 <footer>
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
