--- a/arx.monks.cloud/src/html/work-with-us/index.html
+++ b/arx.monks.cloud/src/html/work-with-us/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/assets/css/typography.css">
   <link rel="stylesheet" href="/assets/css/colors.css">
   <link rel="stylesheet" href="/assets/css/header.css">
-  <link rel="stylesheet" href="/assets/css/strategy.css">
+  <link rel="stylesheet" href="/assets/css/subsite-managers.css">
 
   <!-- MATERIAL DESIGN COMPONENTS -->
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
@@ -121,12 +121,167 @@
 <section class="intro">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="dark-box intro-box box-shadow mdc-layout-grid__cell">
+      <div class="dark-box intro-box mdc-layout-grid__cell">
         <p>How we work with our companies</p>
       </div>
     </div>
   </div>
 </section>
+<div class="mdc-layout-grid layout-arx">
+  <div class="mdc-layout-grid__inner">
+    <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="border-bg"></div>
+    </div>
+  </div>
+</div>
+<section class="transaction">
+  <div class="mdc-layout-grid layout-arx">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Entrepreneurs</h2>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h3 class="underline--light">Expansion through acquisitions or new markets</h3>
+        <p>Over half of the ARX investments over the last decade have achieved growth
+          through completing an add-on acquisition or entering a new geographic market.
+          ARX has the capability to invest follow-on equity into its portfolio companies
+          to fund growth.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h3 class="underline--light">Introducing the right people</h3>
+        <p>We’ve developed a deep pool of talented industry experts over our 20-year history that can help strengthen
+          management teams and boards.</p>
+      </div>
+      <div class="dark-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h3 class="underline--light">Keeping debt levels low</h3>
+        <p>We don’t believe in burdening our companies with excessive debt. We keep
+          debt levels low so the company can pursue opportunities for&nbsp;growth.</p>
+      </div>
+      <div
+        class="yellow-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h3 class="underline--dark">Positioning businesses for the future</h3>
+        <p>We have proven expertise in positioning former family-owned businesses for eventual exits to international
+          strategic buyers.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h3 class="underline--light">Non-executive board development</h3>
+        <p>ARX adds value through its systematic approach to introducing best-practice corporate governance, reporting
+          standards and strategic guidance.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="managers">
+  <div class="mdc-layout-grid layout-arx">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Managers</h2>
+        <p class="sub-title">We work with our portfolio company leadership teams according to two guiding principles.</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
+        <h3 class="underline--light">Ownership</h3>
+        <p class="text-opacity">We believe in creating ownership structures where our portfolio company
+          managers become shareholders alongside ARX. Whether in a management buyout (MBO)
+          or a management buy-in (MBI) structure, equity-oriented incentive structures
+          create strong alignment and a solid partnership with our portfolio company
+          management&nbsp;teams</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
+        <h3 class="underline--light">Autonomy</h3>
+        <p class="text-opacity">We believe in working with the most qualified and committed management teams
+          and providing them autonomy to run the day-to-day activities of our companies.
+          We are totally committed to creating shared value within our portfolio companies
+          and we provide entrepreneurial managers the necessary level of independence to
+          deliver results while supporting them from a non-executive&nbsp;level.</p>
+        <p class="text-opacity">We encourage any prospective manager or entrepreneur considering a
+          transaction partnership with ARX to directly check our references and
+          track-record.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="">
+  <div class="mdc-layout-grid layout-arx">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h2>Intermediaries</h2>
+        <p class="sub-title">For over 20&nbsp;years we&nbsp;have worked with intermediaries of all types&nbsp;&ndash;
+          whether individual deal introducers or multinational institutional
+          advisory&nbsp;firms.</p>
+        <p class="sub-title">Whether engaged on the sell-side for a client seeking to divest or raise
+          capital, or in a situation where an intermediary introduces an exclusive
+          opportunity to ARX, our approach is consistent:</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h3 class="underline--light">Responsiveness and transparency</h3>
+        <p class="text-opacity">We are not time wasters. We provide feedback promptly and clearly regarding our level of interest in a
+          transaction.</p>
+
+        <h3 class="underline--light">Compensation</h3>
+        <p class="text-opacity">We compensate buy-side intermediaries for exclusively introducing us to
+          proprietary investment opportunities that get&nbsp;closed.</p>
+
+        <h3 class="underline--light">Integrity</h3>
+        <p class="text-opacity">Our reputation is a key asset&nbsp;&ndash; and we respect processes and the vital
+          role that intermediaries play in helping us close fair deals for all parties.
+          Some of our closest intermediary relationships are based on mutual trust that
+          has been built over multiple&nbsp;deals.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<footer>
+  <div class="mdc-layout-grid layout-arx">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell">
+        <div class="sro">
+          <a class="logo" href="/" title="Přejít na hlavní stránku">
+            <svg width="50" height="50" viewBox="0 0 77 77" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <title>[Logo] ARX</title>
+              <path
+                d="M77 77C51.3333 77 25.6667 77 0 77C0 51.3333 0 25.7049 0 0C25.6667 0 51.3333 0 77 0C77 25.6667 77 51.3333 77 77ZM4.85069 4.8125C4.85069 27.309 4.85069 49.691 4.85069 72.1111C27.3472 72.1111 49.7292 72.1111 72.1111 72.1111C72.1111 49.6528 72.1111 27.2708 72.1111 4.8125C49.691 4.8125 27.3472 4.8125 4.85069 4.8125Z"
+                fill="#0A2137"/>
+              <path
+                d="M30.5555 45.0696C34.5278 45.0696 38.3854 44.9168 42.243 45.1078C45.2986 45.2605 47.0555 47.2085 47.2847 50.1876C47.5139 53.0904 46.0243 55.2675 43.1597 56.1078C42.8542 56.1842 42.5868 56.2987 42.1667 56.4133C45.375 58.705 46.75 62.1807 49.0035 65.4654C47.2847 65.4654 45.7951 65.5036 44.3437 65.4272C44.0764 65.4272 43.7326 65.0453 43.5417 64.7397C42.1667 62.7154 40.7535 60.7293 39.4167 58.6668C38.2708 56.948 36.6285 56.7189 34.6805 56.9099C34.6805 59.7362 34.6805 62.4862 34.6805 65.3508C33.2292 65.3508 31.9305 65.3508 30.5555 65.3508C30.5555 58.5904 30.5555 51.83 30.5555 45.0696ZM34.7569 48.5071C34.7569 50.2258 34.7569 51.8682 34.7569 53.4342C36.8576 53.4342 38.9201 53.5105 40.9444 53.396C42.3194 53.3196 43.0451 52.2119 43.0069 50.8369C42.9687 49.5001 42.2049 48.5835 40.7917 48.5071C38.8437 48.4307 36.8576 48.5071 34.7569 48.5071Z"
+                fill="#0A2137"/>
+              <path
+                d="M28.7604 65.5035C27.3472 65.5035 26.125 65.5417 24.9028 65.4653C24.5972 65.4271 24.1771 65.0833 24.0625 64.7778C23.6042 63.7465 23.184 62.6771 22.8403 61.5695C22.6493 60.9583 22.3056 60.7674 21.6562 60.7674C19.4792 60.8056 17.3021 60.7292 15.125 60.8056C14.7431 60.8056 14.2465 61.1875 14.0937 61.5313C13.6354 62.5243 13.2535 63.5938 12.9097 64.625C12.7187 65.1979 12.4514 65.5035 11.7639 65.4653C10.6181 65.4271 9.51042 65.4653 8.25 65.4653C8.40278 65.0069 8.47917 64.6632 8.59375 64.3576C11 58.1701 13.4062 51.9826 15.7743 45.7569C16.0417 45.0694 16.3472 44.8021 17.1111 44.8403C18.2569 44.9167 19.6319 44.5347 20.434 45.0694C21.1979 45.566 21.3889 46.9792 21.809 48.0104C23.9861 53.3958 26.125 58.7813 28.3021 64.1667C28.4167 64.5868 28.5312 64.9306 28.7604 65.5035ZM18.3333 49.7674C17.3785 52.441 16.5 54.7708 15.6215 57.1771C17.5312 57.1771 19.25 57.1771 21.0833 57.1771C20.2049 54.7708 19.3264 52.441 18.3333 49.7674Z"
+                fill="#0A2137"/>
+              <path
+                d="M59.316 58.5904C57.9792 60.6147 56.6806 62.5626 55.4584 64.5105C55 65.2362 54.5035 65.5417 53.625 65.5035C52.441 65.4272 51.2952 65.4653 49.9202 65.4653C50.1493 65.0452 50.3021 64.7397 50.4549 64.4723C52.4028 61.5313 54.3125 58.5904 56.2986 55.6876C56.757 55.0001 56.8334 54.5035 56.3368 53.7779C54.5799 51.2188 52.9375 48.6216 51.257 46.0244C51.066 45.7188 50.875 45.3751 50.5695 44.8785C52.1354 44.8785 53.5486 44.8404 54.9236 44.9167C55.2292 44.9167 55.6111 45.3369 55.8403 45.6424C56.9861 47.323 58.132 49.0799 59.3924 50.9515C60.5 49.2709 61.6459 47.7431 62.6007 46.139C63.1736 45.1459 63.8611 44.764 64.9688 44.8785C66 44.9549 66.9931 44.9167 68.2535 44.9167C67.9861 45.3751 67.8334 45.7188 67.6424 45.9862C65.9236 48.6216 64.2049 51.2952 62.4098 53.9306C61.9896 54.5417 61.9896 54.9237 62.4098 55.5348C64.3959 58.4376 66.3056 61.3785 68.2535 64.3195C68.4445 64.6251 68.6354 64.9306 68.941 65.4653C67.2604 65.4653 65.8091 65.5035 64.3577 65.4272C64.0521 65.4272 63.7466 65.0452 63.5556 64.7397C62.4098 63.0209 61.3021 61.3022 60.1563 59.5834C59.8507 59.316 59.6216 59.0105 59.316 58.5904Z"
+                fill="#0A2137"/>
+            </svg>
+          </a>
+          <p class="">ARX Equity Partners<br>
+            © 2012&ndash;2016 All rights reserved</p>
+        </div>
+        <p class="legal-notice">The ARX IV Fund benefits from the support of the European Union under the
+          Equity Facility for Growth established under Regulation (EU) No 1287/2013 of the
+          European Parliament and the Council establishing a Programme for the
+          Competitiveness of Enterprises and small and medium enterprises (COSME)
+          (2014&ndash;2020)</p>
+      </div>
+      <div class="mdc-layout-grid__cell">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Strategy</a></li>
+          <li><a href="">Work With Us</a></li>
+          <li><a href="">Team</a></li>
+        </ul>
+      </div>
+      <div class="mdc-layout-grid__cell">
+        <ul>
+          <li><a href="">Case Study</a></li>
+          <li><a href="">Investments</a></li>
+          <li><a href="">News</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
