[arx.monks.cloud] Removed MDC and added Proxima Nova font

--- a/arx.monks.cloud/src/html/index.html
+++ b/arx.monks.cloud/src/html/index.html
@@ -2,21 +2,16 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8">
   <title>ARX</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-
+  <link rel="preload" as="stylesheet" href="https://use.typekit.net/sxe0okz.css">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/typography.css">
   <link rel="stylesheet" href="/assets/css/colors.css">
   <link rel="stylesheet" href="/assets/css/header.css">
-
-  <!-- MATERIAL DESIGN COMPONENTS -->
-  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
 </head>
 
