--- a/.scripts/create-site/src/html/index.html
+++ b/.scripts/create-site/src/html/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <title>%APP_TITLE%</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
