--- a/zive.tv/src/html/index.html
+++ b/zive.tv/src/html/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>TopMonks</title>
+  <title>TopMonks Živé.tv</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
   <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
-    <h1>TopMonks</h1>
-    <h2>Created with simple generator</h2>
+    <h1>TopMonks Živé.tv</h1>
+    <h2></h2>
   </div>
 </body>
 
