[create-site] Add mandatory meta description

--- a/.scripts/create-site/src/html/index.html
+++ b/.scripts/create-site/src/html/index.html
@@ -2,11 +2,12 @@
 <html lang="cs">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>%APP_TITLE%</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name="description" content="Created with simple generator">
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
