--- a/zive.tv/src/html/index.html
+++ b/zive.tv/src/html/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name="description" content="Živé vysílání z TopMonks">
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
