[zive.tv] Typography

--- a/zive.tv/src/html/index.html
+++ b/zive.tv/src/html/index.html
@@ -8,13 +8,15 @@
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="description" content="Živé vysílání z TopMonks">
+
+  {% include "common/futura-lato.njk" %}
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
   <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
     <h1>TopMonks Živé.tv</h1>
-    <h2></h2>
+    <h2>Živé vysílání z TopMonks</h2>
   </div>
 </body>
 
